Agregando nuevo parrafo y estylos

--- a/blogpost.html
+++ b/blogpost.html
@@ -8,6 +8,7 @@
             <div id="post">
                 <h1>Este es el titulo actractivo e interesante del post</h1>
                 <p>Y este es el parrafo de inicio donde vamos a explicar las cosas increibles que se pueden hacer con ramas</p>
+                <p>En este proyecto estamos cambiando informacion en master</p>
             </div>
         </div>
     </body>
