--- a/blogpost.html
+++ b/blogpost.html
@@ -14,6 +14,7 @@
             <div id="post">
                 <h1>Primer Proyecto Curso de Git con Freddy</h1>
                 <p>Aprendiendo como solucionar conflicto de merge</p>
+                <p>Creando nuevo parrafo para poder hacer un merge</p>
             </div>
         </div>
     </body>
